<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/tools"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="1000"
        app:showAsAction="never"
        android:title="@string/theme_settings" />
    <item
        android:id="@+id/changeView"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_cached_black_24dp"
        android:title="@string/view" />
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        app:actionViewClass= "android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/addItem"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add"
        android:title="@string/add"/>

</menu>