<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/choose"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose" />
    <LinearLayout
        android:id="@+id/list_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/button_selector"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_listmode"
            android:contentDescription="@string/listview"
            android:paddingTop="3dp"
            android:layout_gravity="start"/>
        <TextView
            android:id="@+id/listView"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="19sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/grid_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/button_selector"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:src="@drawable/ic_gridmode"
            android:contentDescription="@string/gridview"
            android:layout_gravity="start"/>
        <TextView
            android:id="@+id/gridView"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="19sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid" />
    </LinearLayout>
</LinearLayout>